--- a/lab-python-flow-control.ipynb
+++ b/lab-python-flow-control.ipynb
@@ -77,11 +77,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "499552c8-9e30-46e1-a706-4ac5dc64670e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
+    "\n",
     "def encounter_ghost():\n",
     "    \"\"\"\n",
     "    This function handles the encounter with a ghost. \n",
@@ -93,12 +95,19 @@
     "    \"\"\"\n",
     "    print(\"You encounter a ghost!\")\n",
     "    \n",
-    "    # your code goes here"
+    "    outcome = random.randint(1, 10)\n",
+    "\n",
+    "    if outcome <= 5:\n",
+    "        print(\"You defeated the ghost!\")\n",
+    "        return True\n",
+    "    else:\n",
+    "        print(\"You lost the battle...\")\n",
+    "        return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d3e4076b-48cc-41ac-95ad-891743e775f5",
    "metadata": {},
    "outputs": [],
@@ -130,7 +139,50 @@
     "\n",
     "    \"\"\"\n",
     "     \n",
-    "    # your code goes here"
+    "    health = 10\n",
+    "    items = []\n",
+    "\n",
+    "    while True:\n",
+    "        choice = input(\"Choose a path (left/right/door): \").strip().lower()\n",
+    "\n",
+    "        if choice == \"left\":\n",
+    "            print(\"You walk down the left corridor...\")\n",
+    "            if random.random() < 0.5:\n",
+    "                print(\"You found a potion!\")\n",
+    "                items.append(\"potion\")\n",
+    "            else:\n",
+    "                print(\"You fell into a trap! You lose 2 health points.\")\n",
+    "                health -= 2\n",
+    "\n",
+    "        elif choice == \"right\":\n",
+    "            print(\"You walk down the right corridor...\")\n",
+    "            if encounter_ghost():\n",
+    "                print(\"You found a key!\")\n",
+    "                items.append(\"key\")\n",
+    "            else:\n",
+    "                print(\"You lost 2 health points in the fight.\")\n",
+    "                health -= 2\n",
+    "\n",
+    "        elif choice == \"door\":\n",
+    "            if \"key\" in items:\n",
+    "                print(\"You unlocked the door and found the Treasure! Congratulations!\")\n",
+    "                items.remove(\"key\")\n",
+    "                break\n",
+    "            else:\n",
+    "                print(\"The door is locked. You need a key!\")\n",
+    "\n",
+    "        else:\n",
+    "            print(\"Invalid choice. Please try again.\")\n",
+    "\n",
+    "        if health <= 0:\n",
+    "            if \"potion\" in items:\n",
+    "                print(\"The potion saved you! You regain 5 health points.\")\n",
+    "                health += 5\n",
+    "                items.remove(\"potion\")\n",
+    "            else:\n",
+    "                print(\"Game over, you lost all your health points.\")\n",
+    "                break\n",
+    "\n"
    ]
   },
   {
@@ -146,7 +198,30 @@
    "execution_count": null,
    "id": "f238dc90-0be2-4d8c-93e9-30a1dc8a5b72",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the Haunted Mansion!\n",
+      "You walk down the left corridor...\n",
+      "You fell into a trap! You lose 2 health points.\n",
+      "You walk down the left corridor...\n",
+      "You found a potion!\n",
+      "You walk down the left corridor...\n",
+      "You fell into a trap! You lose 2 health points.\n",
+      "You walk down the left corridor...\n",
+      "You fell into a trap! You lose 2 health points.\n",
+      "You walk down the right corridor...\n",
+      "You encounter a ghost!\n",
+      "You lost the battle...\n",
+      "You lost 2 health points in the fight.\n",
+      "The door is locked. You need a key!\n",
+      "The door is locked. You need a key!\n",
+      "Invalid choice. Please try again.\n"
+     ]
+    }
+   ],
    "source": [
     "run_mansion()"
    ]
@@ -162,7 +237,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -176,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
